<?xml version="1.0"?>
<package format="2">
  <name>lqr_circle</name>
  <version>0.0.0</version>
  <description>The lqr_circle package</description>

  <maintainer email="minipc@todo.todo">minipc</maintainer>

  <!-- Add the appropriate license -->
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies for building -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>livox_ros_driver2</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>yhs_can_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  
  <!-- Dependencies for execution -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>yhs_can_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Test dependencies if any -->
  <!-- <test_depend>gtest</test_depend> -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
